# plugin-generic-exporter

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
docs/: todo.md
kubernetes/: cluster-example.yaml  deployment-patch.json  install-patch.json  sql-exporter-config.yaml
script/: update_proto.sh
scripts/: build.sh  image.sh  run.sh  update_proto.sh
spool/: cnpg-1.patch
src/: cnpg.rs  consts.rs  helper.rs  identity.rs  main.rs  operator.rs  operator_lifecycle.rs
src/identity/: mod.rs
