[package]
name = "plugin-generic-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = [ "net" ]}
k8s-openapi = { version = "0.21.1", features = ["latest"] }
json-patch = "*"

[build-dependencies]
tonic-build = "0.11"
